--- a/FirstProject/init.jrxml
+++ b/FirstProject/init.jrxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.1.0.final using JasperReports Library version 6.4.3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="init" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="32139c7a-c1be-4e9b-8b64-e8dfc7a7ca61">
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="PostGreSql business_tables"/>
+	<template><![CDATA["file:/C:/Users/Gabriel/jasper/Templates%20&%20Styles/Assl-Style-Template.jrtx"]]></template>
 	<queryString>
-		<![CDATA[]]>
+		<![CDATA[select 1]]>
 	</queryString>
 	<background>
 		<band splitType="Stretch"/>
@@ -19,7 +21,7 @@
 	<detail>
 		<band height="125" splitType="Stretch">
 			<textField>
-				<reportElement x="332" y="47" width="100" height="30" uuid="c73f4274-5d2c-47e7-861a-cf5d9535e0ad"/>
+				<reportElement style="NormalText" x="332" y="47" width="100" height="30" uuid="c73f4274-5d2c-47e7-861a-cf5d9535e0ad"/>
 				<textFieldExpression><![CDATA["Text Field"]]></textFieldExpression>
 			</textField>
 		</band>
