--- a/Templates & Styles/Templates/ReportCoverTemplate.jrxml
+++ b/Templates & Styles/Templates/ReportCoverTemplate.jrxml
@@ -21,33 +21,46 @@
 		<band height="802" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image scaleImage="FillFrame">
-				<reportElement style="NormalText" stretchType="ContainerBottom" x="-1" y="0" width="555" height="802" uuid="88edb17f-6815-4a96-bb92-5e3a1918450e">
+				<reportElement style="NormalText" stretchType="ContainerBottom" x="0" y="0" width="555" height="802" uuid="88edb17f-6815-4a96-bb92-5e3a1918450e">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<imageExpression><![CDATA["Images/Client-Security-Report_CG.jpg"]]></imageExpression>
 			</image>
-			<image>
-				<reportElement x="29" y="108" width="465" height="72" uuid="20aa50e9-eda7-4648-bc7c-922d3e079813">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<imageExpression><![CDATA["Images/CoverTitleBackgoundv3.png"]]></imageExpression>
-			</image>
+			<rectangle radius="15">
+				<reportElement mode="Opaque" x="30" y="100" width="491" height="61" forecolor="#3DE6F5" backcolor="rgba(7, 204, 230, 0.6862745)" uuid="f412760f-9cf5-4360-ba1c-64c4c17f4939"/>
+				<graphicElement>
+					<pen lineStyle="Solid"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle radius="15">
+				<reportElement mode="Opaque" x="30" y="110" width="480" height="61" forecolor="#3DE6F5" backcolor="rgba(48, 198, 252, 0.7058824)" uuid="acca72f4-8757-4fe3-8561-961fd9f7a68e"/>
+				<graphicElement>
+					<pen lineStyle="Solid"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle radius="15">
+				<reportElement mode="Opaque" x="35" y="110" width="435" height="61" forecolor="#3DE6F5" backcolor="rgba(48, 232, 252, 0.64705884)" uuid="168ac3e7-82b0-4c94-bd2f-6e4bddd2ada3"/>
+				<graphicElement>
+					<pen lineStyle="Solid"/>
+				</graphicElement>
+			</rectangle>
+			<rectangle>
+				<reportElement x="30" y="640" width="501" height="131" backcolor="rgba(255, 255, 255, 0.6862745)" uuid="cf3ec83f-fee5-40bf-9f17-062b0bd75afa"/>
+				<graphicElement>
+					<pen lineStyle="Solid" lineColor="#797878"/>
+				</graphicElement>
+			</rectangle>
 			<textField>
-				<reportElement style="coverTitleStyle" x="40" y="120" width="420" height="57" forecolor="#FFFCFC" uuid="c375b7b0-6d38-406f-b9b3-117ce0baf1a6"/>
-				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
-			</textField>
-			<image>
-				<reportElement x="31" y="639" width="490" height="135" uuid="38b8055f-2fc1-4df6-b899-b0351a1c8460"/>
-				<imageExpression><![CDATA["Images/CoverTitleFooter.png"]]></imageExpression>
-			</image>
-			<textField>
-				<reportElement style="coverPrintingDate" x="40" y="650" width="473" height="20" uuid="9ab53f02-e9d0-4fd3-8e4b-009b4d81f154"/>
+				<reportElement style="coverPrintingDate" x="45" y="655" width="473" height="20" uuid="df41d874-9907-41bd-85de-4a5e6d50f2d1"/>
 				<textFieldExpression><![CDATA["Printed on " + DATEFORMAT(TODAY( ), "E MMM d, yyyy")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="coverCustomer" x="40" y="674" width="474" height="26" uuid="c05e6f6a-a878-4902-b44a-dba4602d8507"/>
+				<reportElement style="coverTitleStyle" mode="Transparent" x="47" y="117" width="420" height="57" forecolor="#FFFCFC" uuid="c3a07ed4-e00a-42b1-aeac-75dbbe9e47d3"/>
+				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="coverCustomer" x="45" y="679" width="474" height="26" uuid="cddefc3b-1b9b-4224-9eb2-2a90f02ffb23"/>
 				<textFieldExpression><![CDATA[$P{customer}]]></textFieldExpression>
 			</textField>
 		</band>
