--- a/MSR/MSR-Main.jrxml
+++ b/MSR/MSR-Main.jrxml
@@ -1,61 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.3.1.final using JasperReports Library version 6.8.1-3d4b87119c827be13776e451fb3738062f84a87d  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="MSR-Main" pageWidth="595" pageHeight="842" sectionType="Part" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30" uuid="d2716064-8ae4-40cf-a575-33afba400e3a">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="PostGreSql business_tables"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
 	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
 	<property name="com.jaspersoft.studio.book.group.cover.header" value="Cover and Table of Contents"/>
 	<property name="com.jaspersoft.studio.book.group.cover.footer" value="Backcover"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8080/jasperserver/"/>
-	<property name="ireport.jasperserver.user" value="palg"/>
-	<property name="ireport.jasperserver.report.resource" value="/reports/MSR_Main_files/main_jrxml"/>
-	<property name="ireport.jasperserver.reportUnit" value="/reports/MSR_Main"/>
+	<parameter name="Parameter1" class="java.lang.String"/>
 	<parameter name="coverTitle" class="java.lang.String">
 		<defaultValueExpression><![CDATA["Monthly Security Report"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="customer" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Arab Bank"]]></defaultValueExpression>
 	</parameter>
 	<queryString language="SQL">
 		<![CDATA[select 1]]>
 	</queryString>
+	<variable name="chapter" class="java.lang.Integer">
+		<initialValueExpression><![CDATA[1]]></initialValueExpression>
+	</variable>
+	<variable name="section" class="java.lang.Integer">
+		<initialValueExpression><![CDATA[0]]></initialValueExpression>
+	</variable>
+	<variable name="subsection" class="java.lang.String">
+		<initialValueExpression><![CDATA[0]]></initialValueExpression>
+	</variable>
 	<group name="cover">
 		<groupHeader>
-			<part uuid="bd3b5f8b-5c75-42f5-9ced-0e4ddb60a2e8">
+			<part uuid="815fa956-41f3-4524-9f4b-79b1a5bcd299">
 				<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
 					<subreportParameter name="REPORT_CONNECTION">
 						<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
+					</subreportParameter>
+					<subreportParameter name="coverTitle">
+						<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
 					</subreportParameter>
 					<subreportParameter name="customer">
-						<subreportParameterExpression><![CDATA[$P{customer}]]></subreportParameterExpression>
+						<subreportParameterExpression><![CDATA[$P{Parameter1}]]></subreportParameterExpression>
 					</subreportParameter>
-					<subreportParameter name="coverTitle">
-						<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportExpression><![CDATA["ReportCoverTemplate.jasper"]]></subreportExpression>
-				</p:subreportPart>
-			</part>
-			<part uuid="703e81a3-8ec6-4f72-955d-a6e82613ce75">
-				<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
-					<subreportParameter name="REPORT_CONNECTION">
-						<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter name="coverTitle">
-						<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportExpression><![CDATA["C:\\Users\\Gabriel\\jasper\\Templates & Styles\\Templates\\Standard-TOC-Page.jasper"]]></subreportExpression>
+					<subreportExpression><![CDATA["C:\\Users\\Gabriel\\jasper\\Templates & Styles\\Templates\\ReportCoverTemplate.jasper"]]></subreportExpression>
 				</p:subreportPart>
 			</part>
 		</groupHeader>
 	</group>
-	<detail>
-		<part uuid="0292482b-3bd5-40e8-9ace-2991ac81b501">
-			<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
-				<subreportParameter name="REPORT_CONNECTION">
-					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportExpression><![CDATA["C:\\Users\\Gabriel\\jasper\\Templates & Styles\\Templates\\Welcome.jasper"]]></subreportExpression>
-			</p:subreportPart>
-		</part>
-	</detail>
 </jasperReport>
