--- a/Templates & Styles/Templates/Standard-TOC-Page.jrxml
+++ b/Templates & Styles/Templates/Standard-TOC-Page.jrxml
@@ -6,7 +6,11 @@
 	<property name="com.jaspersoft.studio.unit.bottomMargin" value="cm"/>
 	<property name="com.jaspersoft.studio.unit.leftMargin" value="cm"/>
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="cm"/>
-	<template><![CDATA["Styles/Assl-Style-Template.jrtx"]]></template>
+	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8083/jasperserver/"/>
+	<property name="ireport.jasperserver.user" value="palg"/>
+	<property name="ireport.jasperserver.report.resource" value="/Templates/Table_Of_Content/Standard_TOC_Page_files/main_jrxml"/>
+	<property name="ireport.jasperserver.reportUnit" value="/Templates/Table_Of_Content/Standard_TOC_Page"/>
+	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<style name="Title" hTextAlign="Right" hImageAlign="Right" fontSize="32">
 		<box>
 			<topPen lineWidth="1.0"/>
