--- a/Templates & Styles/Templates/Welcome.jrxml
+++ b/Templates & Styles/Templates/Welcome.jrxml
@@ -12,6 +12,10 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="cm"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8083/jasperserver/"/>
+	<property name="ireport.jasperserver.user" value="palg"/>
+	<property name="ireport.jasperserver.report.resource" value="/Templates/Summary/Welcome_files/main_jrxml"/>
+	<property name="ireport.jasperserver.reportUnit" value="/Templates/Summary/Welcome"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<parameter name="coverTitle" class="java.lang.String">
 		<defaultValueExpression><![CDATA["NEWSLETTER TITLE"]]></defaultValueExpression>
