--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -68,17 +68,23 @@
 	<detail>
 		<band height="249" splitType="Stretch">
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="50" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b"/>
+				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="50" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
+					<property name="com.jaspersoft.studio.unit.tabStopWidth" value="px"/>
+				</reportElement>
+				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
+				<textElement>
+					<paragraph tabStopWidth="0"/>
+				</textElement>
 				<text><![CDATA[The management summary is an overview on all the figures and information provided. With this summary we want to give a quick view on all topics detailed in the report.]]></text>
 			</staticText>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
-				<reportElement style="Header-2" x="0" y="2" width="453" height="18" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
+				<reportElement style="Header-2" x="0" y="2" width="455" height="18" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
 				<textFieldExpression><![CDATA[$V{x.Management_Summary}]]></textFieldExpression>
 				<anchorNameExpression><![CDATA[$V{x.Management_Summary}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.Management_Summary}]]></hyperlinkAnchorExpression>
 			</textField>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="2">
-				<reportElement style="Header-3" x="0" y="70" width="455" height="20" uuid="dbe59c5f-ff6d-40dd-8a32-88a55c7f969e"/>
+				<reportElement style="Header-3" positionType="Float" x="0" y="70" width="455" height="20" uuid="dbe59c5f-ff6d-40dd-8a32-88a55c7f969e"/>
 				<textFieldExpression><![CDATA[$V{x.y+1_access_control}]]></textFieldExpression>
 				<anchorNameExpression><![CDATA[$V{x.y+1_access_control}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.y+1_access_control}]]></hyperlinkAnchorExpression>
