--- a/MSR/MSR-Introduction.jrxml
+++ b/MSR/MSR-Introduction.jrxml
@@ -65,7 +65,12 @@
 	<detail>
 		<band height="249" splitType="Stretch">
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="90" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b"/>
+				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="90" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
+					<property name="com.jaspersoft.studio.unit.tabStopWidth" value="px"/>
+				</reportElement>
+				<textElement>
+					<paragraph tabStopWidth="0"/>
+				</textElement>
 				<text><![CDATA[The purpose of this monthly report is to give to the Client a global overview on the security related controls, issues and activities of the provided services.
 The scope is extended to all information security perimeter as agreed and defined in the Security Control Document (SCD), and the document template is set forth in the Security Report Content parameter described in section 6.X and 15.1 of the SCD 5,X. According to the amendment process, any change to the document template will follow the procedure defined in Schedule Q: Contract Amendment Process of the Agreement for Outsourcing Services.
 
